--- a/blog.html
+++ b/blog.html
@@ -46,12 +46,10 @@ body {
 }
 </style>
 
-<script src="//rss.bloople.net/?url=https%3A%2F%2Fbluetinge.dev%2Frss.xml&showtitle=false&type=js"></script>
 </head>
 <body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<div class="container">
+	<script src="//rss.bloople.net/?url=https%3A%2F%2Fbluetinge.dev%2Frss.xml&showtitle=false&type=js"></script>
+</div>
 </body>
 </html>
