--- a/blog.html
+++ b/blog.html
@@ -46,10 +46,26 @@ body {
 }
 </style>
 
+<!--Stylizing for RSS2HTML-->
+<style>
+.feed-title {
+  display:none;
+}
+.feed-item-title {
+  display:none;
+}
+.feed-item-desc {
+  display:none;
+}
+</style>
+
 </head>
 <body>
 <div class="container">
-	<script src="//rss.bloople.net/?url=https%3A%2F%2Fbluetinge.dev%2Frss.xml&showtitle=false&type=js"></script>
+<h2 class="title">bluetinge.dev/blog</h2>
+<p><small><i>Under construction</i></small></p>
+
+<script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.bluetinge.dev%2Frss.xml&showtitle=false&type=js"></script>
 </div>
 </body>
 </html>
