--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,7 @@
 <head>
 <title>Blog</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="shortcut icon" type="image/png" href="favicon.png">
 
 <style>
 body {
@@ -63,7 +64,7 @@ body {
 <body>
 <div class="container">
 <h2 class="title">bluetinge.dev/blog</h2>
-<p><small><i>Under construction</i></small></p>
+<p><small><i style="color:gray">Under construction</i></small></p>
 
 <script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.bluetinge.dev%2Frss.xml&showtitle=false&type=js"></script>
 </div>
