--- a/blog.html
+++ b/blog.html
@@ -66,7 +66,9 @@ body {
 <h2 class="title">bluetinge.dev/blog</h2>
 <p><small><i style="color:gray">Under construction</i></small></p>
 
-<script src="//rss.bloople.net/?url=https%3A%2F%2Fwww.bluetinge.dev%2Frss.xml&showtitle=false&type=js"></script>
+<script src="//rss.bloople.net/?url=https%3A%2F%2Fraw.githubusercontent.com%2Fbluetinge%2Fbluetinge.dev%2Frefs%2Fheads%2Fmain%2Frss.xml&showtitle=false&type=js"></script>
+
+
 </div>
 </body>
 </html>
