tryiing to ensure modal script is added

--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link rel="shortcut icon" type="image/png" href="favicon.png">
 
+<script src="https://rssr.bluetinge.dev/rss-button.js"></script>
+
 <style>
 body {
 	background-color:#525c58;
