--- a/blog.html
+++ b/blog.html
@@ -67,6 +67,7 @@ body {
 <div class="container">
 <h2 class="title">bluetinge.dev/blog</h2>
 <p><small><i style="color:gray">Under construction</i></small></p>
+<p><small class="rssr-font rssr-footer-font" style="vertical-align:middle;"><a href="https://www.bluetinge.dev/rss.xml" target="_blank" rel="noopener noreferrer" class="rssr-reblog-button" style="padding:0.36em;"><img style="height:1em;vertical-align:middle;" src="https://purl.org/rssr/rss-icon" alt=""> <b>Follow me on RSS</b></a></small></p>
 
 <script src="//rss.bloople.net/?url=https%3A%2F%2Fraw.githubusercontent.com%2Fbluetinge%2Fbluetinge.dev%2Frefs%2Fheads%2Fmain%2Frss.xml&showtitle=false&type=js"></script>
 
